<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".MainFragment">

    <TextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"/>

    <EditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_text"
            android:inputType="text" tools:ignore="Autofill"/>

    <Button
            android:id="@+id/btnSetErrorState"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/set_error_state"/>

    <Button
            android:id="@+id/btnSetText"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/set_text"/>

    <Button
            android:id="@+id/btnOpenDetail"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/go_to_detail"/>

</LinearLayout>